# WEB_HW_7_students

./: db.py  models.py  my_select.py  pyproject.toml  seed.py  seed_run.py
alembic/: env.py
alembic/versions/: 3050bb1ff83d_init_migration.py
