[tool.poetry]
name = "web-hw-6-sql"
version = "0.1.0"
description = ""
authors = ["Revuka Oleksandr <a.revuka@gmail.com>"]
readme = "README.md"
packages = [{include = "web_hw_6_sql"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.2.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"
mypy = "^1.4.1"
black = "^23.3.0"
coverage = "^7.2.7"
pre-commit = "^3.3.3"
pyupgrade = "^3.7.0"
ruff = "^0.0.275"
rich = "^13.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[mypy]
dmypyExecutable = "/home/alex/python_projects/WEB_HW_6_SQL/.venv/bin/dmypy"
